fix(ui): Missing Colors
husky was causing issues

--- a/invokeai/frontend/src/styles/Themes/_Colors_Green.scss
+++ b/invokeai/frontend/src/styles/Themes/_Colors_Green.scss
@@ -117,6 +117,7 @@
   --context-menu-bg-color: rgb(46, 48, 58);
   --context-menu-box-shadow: none;
   --context-menu-bg-color-hover: rgb(30, 32, 42);
+  --context-menu-active-item: var(--accent-color-bright);
 
   // Shadows
   --floating-button-drop-shadow-color: var(--accent-color);
